--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AlHamduLillah</string>
+    <string name="app_name">Tabiin</string>
     <string name="Tsel">ЦЕЛЬ</string>
     <string name="plus">+</string>
     <string name="ok">OK</string>
